fix extra space under empty search results. closes #337

--- a/less/app.less
+++ b/less/app.less
@@ -690,6 +690,7 @@ section#the-goods { margin-top: 44px; }
     }
     #playground-results-wrap {
         margin-bottom: 44px;
+        display: none;
     }
 }
 
